--- a/teaching/cs316/calendar.html
+++ b/teaching/cs316/calendar.html
@@ -55,7 +55,7 @@
       <td style="background-color: rgb(0, 0, 0);" bgcolor="#c0c0c0"
  valign="top">Sept 1</td>
       <td
- style="vertical-align: top; background-color: rgb(51, 102, 255);">1:
+ style="vertical-align: top; background-color: rgb(51, 102, 255); text-decoration: line-through;">1:
 Object-Oriented Software Development<br>
 2: Derived Classes and Inheritance<br>
       </td>
@@ -79,7 +79,7 @@ Object-Oriented Software Development<br>
       <td style="background-color: rgb(0, 0, 0);" bgcolor="#c0c0c0"
  valign="top">Sept 8</td>
       <td
- style="vertical-align: top; background-color: rgb(51, 102, 255);">3:
+ style="vertical-align: top; background-color: rgb(51, 102, 255); text-decoration: line-through;">3:
 Review: Linked Lists<br>
       </td>
     </tr>
@@ -103,7 +103,7 @@ Last drop day</span><br>
       <td style="background-color: rgb(0, 0, 0);" bgcolor="#c0c0c0"
  valign="top">Sept 15</td>
       <td
- style="vertical-align: top; background-color: rgb(51, 102, 255);">4:
+ style="vertical-align: top; background-color: rgb(51, 102, 255); text-decoration: line-through;">4:
 Algorithm Analysis<br>
       <br>
       </td>
@@ -124,7 +124,7 @@ Algorithm Analysis<br>
       <td style="background-color: rgb(0, 0, 0);" bgcolor="#c0c0c0"
  valign="top">Sept 22</td>
       <td
- style="vertical-align: top; background-color: rgb(51, 102, 255);">5:
+ style="vertical-align: top; background-color: rgb(51, 102, 255); text-decoration: line-through;">5:
 Review: Stacks </td>
     </tr>
     <tr>
@@ -145,7 +145,7 @@ Review: Stacks </td>
       <td style="background-color: rgb(0, 0, 0);" bgcolor="#c0c0c0"
  valign="top">Sept 29</td>
       <td
- style="vertical-align: top; background-color: rgb(51, 102, 255);">6:
+ style="vertical-align: top; background-color: rgb(51, 102, 255); text-decoration: line-through;">6:
 Review: Searching and Sorting Arrays<br>
 7: Review: Queues<br>
       </td>
@@ -166,7 +166,7 @@ Review: Searching and Sorting Arrays<br>
       <td style="background-color: rgb(0, 0, 0);" bgcolor="#c0c0c0"
  valign="top">Oct 6</td>
       <td
- style="vertical-align: top; background-color: rgb(51, 102, 255);">8:
+ style="vertical-align: top; background-color: rgb(51, 102, 255); text-decoration: line-through;">8:
 Review: Recursion<br>
       </td>
     </tr>
@@ -335,29 +335,39 @@ Graphs </td>
 27</td>
       <td style="background-color: rgb(51, 102, 255);" valign="top">Nov
 28<br>
-      <div style="text-align: center;"><span style="font-style: italic;">Lecture
-14 (from start)</span><br>
+      <div style="text-align: center;">Lectures 14, 15<br>
       </div>
       </td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Nov
 29</td>
       <td style="background-color: rgb(51, 102, 255);" valign="top">Nov
-30</td>
+30<br>
+      <div style="text-align: center;">Lectures 14, 16 </div>
+      </td>
       <td style="background-color: rgb(0, 0, 0);" bgcolor="#c0c0c0"
  valign="top">Dec 1</td>
       <td
  style="vertical-align: top; background-color: rgb(51, 102, 255);">14:
-Hashing and Hash Tables </td>
+Sets and Maps<br>
+15: Hashing and Hash Tables<br>
+16: Sorting<br>
+      </td>
     </tr>
     <tr>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Dec
 4</td>
       <td style="background-color: rgb(51, 102, 255);" valign="top">Dec
-5</td>
+5<br>
+      <div style="text-align: center;">Lectures 16, 17 </div>
+      </td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Dec
 6</td>
       <td style="background-color: rgb(51, 102, 255);" valign="top">Dec
-7</td>
+7<br>
+      <div style="text-align: center;"><span style="font-style: italic;">Lecture
+17 (from slide 16)</span><br>
+      </div>
+      </td>
       <td style="background-color: rgb(0, 0, 0);" bgcolor="#c0c0c0"
  valign="top">Dec 8<br>
       <div style="text-align: center;"><span style="font-style: italic;">Due:
@@ -365,7 +375,8 @@ Lab 3</span><br>
       </div>
       </td>
       <td
- style="vertical-align: top; background-color: rgb(51, 102, 255);"><br>
+ style="vertical-align: top; background-color: rgb(51, 102, 255);">17:
+Advanced Design &amp; Analysis Techniques<br>
       </td>
     </tr>
     <tr>
@@ -373,7 +384,7 @@ Lab 3</span><br>
 11</td>
       <td style="background-color: rgb(51, 102, 255);" valign="top">Dec
 12<br>
-      <div style="text-align: center;">Final Exam (Lecs. 9-?), 5:15<br>
+      <div style="text-align: center;">Final Exam (Lecs. 9-16), 5:15<br>
       </div>
       </td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Dec
@@ -397,4 +408,3 @@ document.write("<br>Only " + diffDays + " days left until end of fall term (12/1
 </script></span>
 </body>
 </html>
-
