--- a/teaching/index.html
+++ b/teaching/index.html
@@ -27,15 +27,15 @@
 <h2>Teaching Schedule<br>
 </h2>
 <ul>
-  <li><a href="cs316/index.html">CPSC 316 - Data Structures (Fall '23)</a><br>
+  <li><a href="cs426/index.html">CPSC 4/526 - Operating Systems (Spring '24)</a></li>
+  <li><a href="cs677/index.html">CPSC 677 - Parallel Processing (Spring '24)<br>
   </li>
-  <li><a href="cs426/index.html">CPSC 4/526 - Operating Systems (Fall
-'23)</a></li>
 </ul>
 <h2>Previous Courses</h2>
 <ul>
   <li>3460:209 - Computer Science I</li>
   <li>3460:210 - Computer Science II</li>
+  <li>CPSC 316 - Data Structures</li>
   <li>3460:389 - Intermediate Topics in
 Computer Science: Cloud
 Computing<br>
@@ -52,9 +52,7 @@ Science<br>
   </li>
   <li>3460:635 - Advanced Algorithms</li>
   <li>3460:641 - Optimizations for Parallel
-Compilers</li>
-  <li>CPSC 677 - Parallel Processing<br>
-  </li>
+Compilers<br></li>
 </ul>
 <h2>Obsolete Courses</h2>
 <ul>
