--- a/teaching/index.html
+++ b/teaching/index.html
@@ -28,7 +28,7 @@
 </h2>
 <ul>
   <li><a href="cs426/index.html">CPSC 4/526 - Operating Systems (Spring '24)</a></li>
-  <li><a href="cs677/index.html">CPSC 677 - Parallel Processing (Spring '24)<br>
+  <li><a href="cs677/index.html">CPSC 677 - Parallel Processing (Spring '24)</a><br>
   </li>
 </ul>
 <h2>Previous Courses</h2>
