--- a/teaching/cs677/index.html
+++ b/teaching/cs677/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta content="text/html; charset=ISO-8859-1"
  http-equiv="content-type">
-  <title>3460:4/526 Under Construction</title>
+  <title>CPSC 677 Under Construction</title>
 </head>
 <body>
 <h1>CPSC 677 Parallel Processing, Spring 2024</h1>
