--- a/teaching/honors/index.html
+++ b/teaching/honors/index.html
@@ -65,7 +65,7 @@ modified specifically for CS majors</a></li>
 Students Graduating in Spring 2024<br>
 </span>
 <ul>
-  <li>CS majors: be registered for <span
+  <li>CS majors: have registered for <span
  style="color: rgb(255, 102, 102);">2-3
 credits</span>
 of <span style="color: rgb(255, 102, 102);">CPSC 497 Individual Study
@@ -74,12 +74,12 @@ Computer </span><span style="color: rgb(255, 102, 102);">Science<span
  style="color: rgb(0, 0, 0);"> </span></span><span
  style="color: rgb(255, 102, 102);"><span style="color: rgb(0, 0, 0);">during
     </span></span><span style="color: rgb(255, 102, 102);"><span
- style="color: rgb(0, 0, 0);">the <span style="font-weight: bold;">Fall
-2023 </span>semester</span></span><span
+ style="color: rgb(0, 0, 0);">a
+prior semester</span></span><span style="color: rgb(255, 102, 102);"><span
+ style="color: rgb(0, 0, 0);"></span></span><span
+ style="color: rgb(255, 102, 102);"><span style="color: rgb(0, 0, 0);"></span></span><span
+ style="color: rgb(255, 102, 102);"><span style="color: rgb(0, 0, 0);"></span></span><span
  style="color: rgb(255, 102, 102);"><span style="color: rgb(0, 0, 0);">.</span></span></li>
-  <ul>
-    <li>... if you haven't already done so in a prior semester.</li>
-  </ul>
   <li>CS majors: register for <span style="color: rgb(255, 102, 102);">2-3
 credits</span>
 of <span style="color: rgb(255, 102, 102);">CPSC 498 Senior Honors
