--- a/teaching/cs426/homePageGraphics/projects.htm
+++ b/teaching/cs426/homePageGraphics/projects.htm
@@ -22,22 +22,19 @@ HOMEWORK
 AND PROGRAMS <br>
 <br>
 &nbsp;&nbsp; Lab 1 - A Simple Linux Shell<br>
-&nbsp;&nbsp; Due October 17<br>
+&nbsp;&nbsp; Due TBD<br>
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 	<a href="../labs/lab 1 linux shell.pdf" target="_top">Description</a>
 	, <a href="../labs/myshell.c" target="_top">seed file</a>.<br>
 <br>
-&nbsp;&nbsp; Lab 2 - Bumper Cars<br>
-&nbsp;&nbsp; Due November 9<br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-	<a href="../labs/lab 2 bumper cars.pdf" target="_top">Description</a><br>
+&nbsp;&nbsp; Lab 2 -<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; pthreads and Semaphores<br>
+&nbsp;&nbsp; Due TBD<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Description<br>
 <br>
 &nbsp;&nbsp; Lab 3 - A Simple File System<br>
-&nbsp;&nbsp; Due December 8<br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a href="../labs/lab3/lab 3 simple file system.pdf" target="_top">Description</a>,
-	<a href="../labs/lab3/floppya.img">disk image</a>,<br>
-	&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a href="../labs/lab3/filesys.c">seed
-	file</a>.<br>
+&nbsp;&nbsp; Due TBD<br>
+&nbsp;&nbsp; coming soon.<br>
 </font></b><b><br>
 </b>
 </body>
