--- a/teaching/cs426/homePageGraphics/instructor.htm
+++ b/teaching/cs426/homePageGraphics/instructor.htm
@@ -32,11 +32,9 @@ O'Neil</span><br>
  style="font-style: italic; color: rgb(252, 191, 67);">edu</span><br>
 &nbsp;&nbsp;&nbsp; Office Hours:<br>
 &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; <span
- style="color: rgb(252, 191, 67);">Tues/Thurs 2:15 - 3:15 PM.<br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Mon 10:30 AM, Weds 2:30 PM<br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; in
-Polsky.</span></font></b><b><font color="#868cde" face="Verdana"
- size="2"><span style="color: rgb(252, 191, 67);"></span></font></b><br
+ style="color: rgb(252, 191, 67);">TBD.</span></font></b><b><font
+ color="#868cde" face="Verdana" size="2"><span
+ style="color: rgb(252, 191, 67);"></span></font></b><br
  style="color: rgb(252, 191, 67);">
 <b><font color="#868cde" face="Verdana" size="2"><span
  style="color: rgb(252, 191, 67);"></span><span
