--- a/teaching/cs677/homePageGraphics/instructor.htm
+++ b/teaching/cs677/homePageGraphics/instructor.htm
@@ -32,8 +32,7 @@ O'Neil</span><br>
  style="font-style: italic; color: rgb(252, 191, 67);">edu</span><br>
 &nbsp;&nbsp;&nbsp; Office Hours:<br>
 &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; <span
- style="color: rgb(252, 191, 67);">Mon/Weds 3:15 - 4:45 PM;<br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Friday 1:45 - 3:30 PM.</span></font></b><b><font
+ style="color: rgb(252, 191, 67);">TBD.</span></font></b><b><font
  color="#868cde" face="Verdana" size="2"><span
  style="color: rgb(252, 191, 67);"></span></font></b><br
  style="color: rgb(252, 191, 67);">
