--- a/teaching/cs677/index.html
+++ b/teaching/cs677/index.html
@@ -81,7 +81,7 @@ SPRING 2024<br>
 <p align="center"><a
  title="Click here to go to the university home page."
  href="http://www.uakron.edu/" target="_top"><img alt="UA Logo"
- src="../../cs426/homePageGraphics/homePageGraphics/uaLogo.png"
+ src="../cs426/homePageGraphics/uaLogo.png"
  style="border: 0px solid ; width: 225px; height: 69px;"></a></p>
 </div>
 <div id="layer1"
