--- a/teaching/cs677/resources.html
+++ b/teaching/cs677/resources.html
@@ -7,7 +7,7 @@
 </head>
 <body style="color: rgb(255, 255, 255); background-color: rgb(0, 0, 0);"
  alink="#fcbf43" link="#fcbf43" vlink="#fcbf43">
-<h1>3460:677 SPRING 2021 RESOURCE PAGE</h1>
+<h1>CPSC 677 SPRING 2024 RESOURCE PAGE</h1>
 <h2>LIBRARY</h2>
 <table style="text-align: left; width: 649px; height: 188px;" border="1"
  cellpadding="2" cellspacing="2">
