--- a/teaching/cs677/homePageGraphics/projects.htm
+++ b/teaching/cs677/homePageGraphics/projects.htm
@@ -17,7 +17,7 @@ font-family:Verdana
 </head>
 <body alink="#af7703" bgcolor="#010516" link="#af7703" text="#ffffff"
  vlink="#fcbf43">
-<b><font color="#868cde" face="Verdana" size="2">3460:677<br>
+<b><font color="#868cde" face="Verdana" size="2">CPSC 677<br>
 HOMEWORK
 AND PROGRAMS <br>
 &nbsp;&nbsp;&nbsp; <a href="../project.pdf" target="_top">Course
