--- a/teaching/cs677/homePageGraphics/description.htm
+++ b/teaching/cs677/homePageGraphics/description.htm
@@ -34,7 +34,7 @@ font-family:Verdana
         <tbody>
           <tr>
             <td width="100%"> <font face="Verdana"><span
- style="font-weight: bold;">3460:677 PARALLEL PROCESSING</span><br>
+ style="font-weight: bold;">CPSC 677 PARALLEL PROCESSING</span><br>
             <br>
             </font><span style="font-family: verdana;">Advanced
 computer architecture, theories of parallel computing, system resources
