--- a/teaching/honors/index.html
+++ b/teaching/honors/index.html
@@ -120,9 +120,9 @@ Exchange</a></span></span>: <span style="font-weight: bold;"></span><span
  style="color: rgb(255, 102, 102);"><span style="color: rgb(0, 0, 0);">
       </span></span><span style="color: rgb(255, 102, 102);"><span
  style="color: rgb(0, 0, 0);"><span
- style="font-weight: bold; font-style: italic; text-decoration: underline;"></span></span></span><span
- style="font-weight: bold;">Monday October 2 2023 </span>(<span
- style="font-style: italic;">estimated</span>)<span
+ style="font-weight: bold; font-style: italic; text-decoration: underline;"></span></span></span>Monday
+October 2 2023<span style="font-weight: bold;"> </span>(<span
+ style="font-style: italic;">already passed</span>)<span
  style="font-weight: bold;"> </span><span style="font-style: italic;"></span></li>
     <li><span style="color: rgb(255, 102, 102);"><span
  style="color: rgb(0, 0, 0);">Preliminary draft to research sponsor: <span
@@ -211,9 +211,9 @@ Exchange</a></span></span>: <span style="font-weight: bold;"></span><span
       <span
  style="font-weight: bold; font-style: italic; text-decoration: underline;"></span></span></span><span
  style="color: rgb(255, 102, 102);"><span style="color: rgb(0, 0, 0);"><span
- style="font-weight: bold; font-style: italic; text-decoration: underline;"></span></span></span><span
- style="font-weight: bold;">Friday December 1 2023 </span>(<span
- style="font-style: italic;">estimated</span>)<span
+ style="font-weight: bold; font-style: italic; text-decoration: underline;"></span></span></span>Friday
+December 1 2023<span style="font-weight: bold;"> </span>(<span
+ style="font-style: italic;">already passed</span>)<span
  style="font-style: italic;"></span><span style="font-weight: bold;"></span><span
  style="font-weight: bold;"></span><span style="font-weight: bold;"></span><span
  style="font-weight: bold;"></span><span style="font-weight: bold;"></span><span
