--- a/teaching/cs677/calendar.html
+++ b/teaching/cs677/calendar.html
@@ -15,7 +15,7 @@
 <center style="color: rgb(255, 255, 255);">
 <h1>CPSC 677, MW 9:15 - 10:30, CAS 143, SPRING 2024</h1>
 </center>
-<table style="color: rgb(255, 255, 255);" border="1" width="100%">
+<table style="width: 100%; color: rgb(255, 255, 255);" border="1">
   <tbody>
     <tr bgcolor="#000000">
       <td style="background-color: rgb(0, 0, 0);" width="20%">
@@ -44,11 +44,10 @@ Day, UA closed</span><br>
       <td style="vertical-align: top; background-color: rgb(0, 0, 0);">Jan
 16<br>
       </td>
-      <td
- style="vertical-align: top; background-color: rgb(51, 102, 255);">Jan
+      <td style="vertical-align: top; background-color: rgb(0, 0, 0);">Jan
 17<br>
-      <div style="text-align: center;">Admin and Intro<br>
-Intro GPU Model<br>
+      <div style="text-align: center; background-color: rgb(0, 0, 0);"><span
+ style="font-style: italic;">Class cancelled by UA, wind chill</span><br>
       </div>
       </td>
       <td style="vertical-align: top; background-color: rgb(0, 0, 0);">Jan
@@ -59,15 +58,13 @@ Intro GPU Model<br>
       </td>
     </tr>
     <tr>
-      <td style="background-color: rgb(204, 51, 204);" bgcolor="#c0c0c0"
+      <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
  valign="top">Jan 22<br>
-      <div
- style="text-align: center; background-color: rgb(204, 51, 204);"><a
- href="https://www.cs.uakron.edu/%7Etoneil/teaching/cs677/">Online Unit
-1</a><br>
+      <div style="text-align: center;">Admin and Intro<br>
+Intro GPU Model<br>
       </div>
       <div
- style="text-align: center; background-color: rgb(204, 51, 204);"><span
+ style="text-align: center; background-color: rgb(51, 102, 255);"><span
  style="font-style: italic;">Sun:
 Last add day</span><br>
       </div>
@@ -79,8 +76,7 @@ Last add day</span><br>
       <div
  style="text-align: center; background-color: rgb(204, 51, 204);"><a
  href="https://www.cs.uakron.edu/%7Etoneil/teaching/cs677/">Online Unit
-2 (Module 1)</a><br>
-      </div>
+1</a> </div>
       </td>
       <td style="background-color: rgb(0, 0, 0);" bgcolor="#c0c0c0"
  valign="top">Jan 25</td>
@@ -89,23 +85,25 @@ Last add day</span><br>
       </td>
     </tr>
     <tr>
-      <td style="background-color: rgb(51, 102, 255);" valign="top">Jan
+      <td style="background-color: rgb(204, 51, 204);" valign="top">Jan
 29<br>
-      <div style="text-align: center;">More on GPU Model<br>
-      <span style="font-style: italic;">Due</span>: HW0<br>
+      <div
+ style="text-align: center; background-color: rgb(204, 51, 204);"><a
+ href="https://www.cs.uakron.edu/%7Etoneil/teaching/cs677/">Online Unit
+2 (Module 1)</a><br>
       </div>
-      <div style="text-align: center;"><span style="font-style: italic;">Sun:
+      <div
+ style="text-align: center; background-color: rgb(204, 51, 204);"><span
+ style="font-style: italic;">Sun:
 Last drop day</span><br>
       </div>
       </td>
       <td style="background-color: rgb(0, 0, 0);" bgcolor="#c0c0c0"
  valign="top">Jan 30</td>
-      <td style="background-color: rgb(204, 51, 204);" valign="top">Jan
+      <td style="background-color: rgb(51, 102, 255);" valign="top">Jan
 31<br>
-      <div
- style="text-align: center; background-color: rgb(204, 51, 204);"><a
- href="https://www.cs.uakron.edu/%7Etoneil/teaching/cs677/">Online Unit
-3 (Module 2)</a><br>
+      <div style="text-align: center;">More on GPU Model<br>
+      <span style="font-style: italic;">Due</span>: HW0<br>
       </div>
       </td>
       <td style="background-color: rgb(0, 0, 0);" bgcolor="#c0c0c0"
@@ -116,8 +114,14 @@ Last drop day</span><br>
       </td>
     </tr>
     <tr>
-      <td style="background-color: rgb(51, 102, 255);" valign="top">Feb
+      <td
+ style="vertical-align: top; background-color: rgb(204, 51, 204);">Feb
 5<br>
+      <div
+ style="text-align: center; background-color: rgb(204, 51, 204);"><a
+ href="https://www.cs.uakron.edu/%7Etoneil/teaching/cs677/">Online Unit
+3 (Module 2)</a><br>
+      </div>
       </td>
       <td style="background-color: rgb(0, 0, 0);" bgcolor="#c0c0c0"
  valign="top">Feb 6<br>
