--- a/teaching/cs426/calendar.html
+++ b/teaching/cs426/calendar.html
@@ -53,6 +53,7 @@ Day, UA closed</span><br>
       <td
  style="vertical-align: top; background-color: rgb(51, 102, 255);">Jan
 18<br>
+      <div style="text-align: center;">Lecture O1 (cont.) </div>
       </td>
       <td style="vertical-align: top; background-color: rgb(0, 0, 0);">Jan
 19<br>
@@ -66,7 +67,11 @@ Last add day</span><br>
       </div>
       </td>
       <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
- valign="top">Jan 23</td>
+ valign="top">Jan 23<br>
+      <div style="text-align: center;"><span style="font-style: italic;">Lectures
+O1 (review), O2</span><br>
+      </div>
+      </td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Jan
 24<br>
       </td>
