--- a/teaching/cs677/homePageGraphics/instructor.htm
+++ b/teaching/cs677/homePageGraphics/instructor.htm
@@ -32,12 +32,12 @@ O'Neil</span><br>
  style="font-style: italic; color: rgb(252, 191, 67);">edu</span><br>
 &nbsp;&nbsp;&nbsp; Office Hours:<br>
 &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; <span
- style="color: rgb(252, 191, 67);">Tues/Weds 1045 - 1145 in BCAS 221A;<br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Mon
-1100 - 1200, Thurs 230 - 330 in<br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-Polsky M183J.</span></font></b><b><font color="#868cde" face="Verdana"
- size="2"><span style="color: rgb(252, 191, 67);"></span></font></b><br
+ style="color: rgb(252, 191, 67);">Tues/Weds 1045 - 1145 in BCAS<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 221A; Mon
+1100 - 1200, Thurs<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 230 - 330
+in Polsky M183J.</span></font></b><b><font color="#868cde"
+ face="Verdana" size="2"><span style="color: rgb(252, 191, 67);"></span></font></b><br
  style="color: rgb(252, 191, 67);">
 <b><font color="#868cde" face="Verdana" size="2"><span
  style="color: rgb(252, 191, 67);"></span><span
