--- a/teaching/cs426/calendar.html
+++ b/teaching/cs426/calendar.html
@@ -49,6 +49,9 @@ Day, UA closed</span><br>
       </td>
       <td style="vertical-align: top; background-color: rgb(0, 0, 0);">Jan
 17<br>
+      <div style="text-align: center;"><span style="font-style: italic;">Late
+start by UA, wind chill</span><br>
+      </div>
       </td>
       <td
  style="vertical-align: top; background-color: rgb(51, 102, 255);">Jan
@@ -57,6 +60,9 @@ Day, UA closed</span><br>
       </td>
       <td style="vertical-align: top; background-color: rgb(0, 0, 0);">Jan
 19<br>
+      <div style="text-align: center;"><span style="font-style: italic;">UA
+closed, snow day</span><br>
+      </div>
       </td>
     </tr>
     <tr>
@@ -68,15 +74,15 @@ Last add day</span><br>
       </td>
       <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
  valign="top">Jan 23<br>
-      <div style="text-align: center;"><span style="font-style: italic;">Lectures
-O1 (review), O2</span><br>
-      </div>
+      <div style="text-align: center;">Lectures O1, O2 </div>
       </td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Jan
 24<br>
       </td>
       <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
- valign="top">Jan 25</td>
+ valign="top">Jan 25<br>
+      <div style="text-align: center;">Lectures O2, O3, O4 </div>
+      </td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Jan
 26<br>
       </td>
@@ -89,7 +95,11 @@ Last drop day</span><br>
       </div>
       </td>
       <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
- valign="top">Jan 30</td>
+ valign="top">Jan 30<br>
+      <div style="text-align: center;"><span style="font-style: italic;">Lectures
+O4 (from slide 7), O5</span><br>
+      </div>
+      </td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Jan
 31<br>
       </td>
@@ -162,7 +172,7 @@ Day observed&nbsp;</div>
 28</td>
       <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
  valign="top">Feb 29<br>
-      <div style="text-align: center;">(Midterm Exam?)<br>
+      <div style="text-align: center;">Midterm Exam (Unit O)<br>
       </div>
       </td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Mar
