--- a/teaching/cs677/calendar.html
+++ b/teaching/cs677/calendar.html
@@ -55,6 +55,9 @@ Day, UA closed</span><br>
       </td>
       <td style="vertical-align: top; background-color: rgb(0, 0, 0);">Jan
 19<br>
+      <div style="text-align: center;"><span style="font-style: italic;">UA
+closed, snow day</span><br>
+      </div>
       </td>
     </tr>
     <tr>
@@ -102,7 +105,8 @@ Last drop day</span><br>
  valign="top">Jan 30</td>
       <td style="background-color: rgb(51, 102, 255);" valign="top">Jan
 31<br>
-      <div style="text-align: center;">More on GPU Model<br>
+      <div style="text-align: center;">Intro GPU Model (cont.)<br>
+More on GPU Model<br>
       <span style="font-style: italic;">Due</span>: HW0<br>
       </div>
       </td>
@@ -178,7 +182,7 @@ Day observed&nbsp;</div>
  valign="top">Feb 27</td>
       <td style="background-color: rgb(51, 102, 255);" valign="top">Feb
 28<br>
-      <div style="text-align: center;">(Midterm Exam?)<br>
+      <div style="text-align: center;">Midterm Exam<br>
       </div>
       </td>
       <td style="background-color: rgb(0, 0, 0);" bgcolor="#c0c0c0"
