--- a/teaching/cs426/calendar.html
+++ b/teaching/cs426/calendar.html
@@ -96,16 +96,16 @@ Last drop day</span><br>
       </td>
       <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
  valign="top">Jan 30<br>
-      <div style="text-align: center;"><span style="font-style: italic;">Lectures
-O4 (from slide 7), O5</span><br>
-      </div>
+      <div style="text-align: center;">Lectures O4, O5 </div>
       </td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Jan
 31<br>
       </td>
       <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
  valign="top">Feb
-1 </td>
+1<br>
+      <div style="text-align: center;">Lecture O5 (cont.) </div>
+      </td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Feb
 2<br>
       </td>
@@ -116,12 +116,17 @@ O4 (from slide 7), O5</span><br>
       </td>
       <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
  valign="top">Feb 6<br>
+      <div style="text-align: center;">Lecture P1<br>
+      </div>
       </td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Feb
 7<br>
       </td>
       <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
  valign="top">Feb 8<br>
+      <div style="text-align: center;"><span style="font-style: italic;">Lectures
+P1 (from slide )</span><br>
+      </div>
       </td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Feb
 9<br>
@@ -172,7 +177,7 @@ Day observed&nbsp;</div>
 28</td>
       <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
  valign="top">Feb 29<br>
-      <div style="text-align: center;">Midterm Exam (Unit O)<br>
+      <div style="text-align: center;">Midterm Exam (Unit O, P1, P2)<br>
       </div>
       </td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Mar
@@ -188,6 +193,9 @@ Last withdraw day</span><br>
       </td>
       <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
  valign="top">Mar 5<br>
+      <div style="text-align: center;"><span style="font-style: italic;">Due:
+Program 1</span><br>
+      </div>
       </td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Mar
 6<br>
@@ -279,6 +287,9 @@ Break</span><br>
       </td>
       <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
  valign="top">Apr 4<br>
+      <div style="text-align: center;"><span style="font-style: italic;">Due
+Program 2</span><br>
+      </div>
       </td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Apr
 5<br>
@@ -287,6 +298,9 @@ Break</span><br>
     <tr>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Apr
 8<br>
+      <div style="text-align: center;"><span style="font-style: italic;">Eclipse
+day</span><br>
+      </div>
       </td>
       <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
  valign="top">Apr 9&nbsp;</td>
@@ -336,6 +350,9 @@ Break</span><br>
       </td>
       <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
  valign="top">May 2<br>
+      <div style="text-align: center;"><span style="font-style: italic;">Due:
+Program 3</span><br>
+      </div>
       </td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">May
 3<br>
