--- a/teaching/cs426/homePageGraphics/projects.htm
+++ b/teaching/cs426/homePageGraphics/projects.htm
@@ -22,18 +22,18 @@ HOMEWORK
 AND PROGRAMS <br>
 <br>
 &nbsp;&nbsp; Lab 1 - A Simple Linux Shell<br>
-&nbsp;&nbsp; Due TBD<br>
+&nbsp;&nbsp; Due March 5<br>
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 	<a href="../labs/lab 1 linux shell.pdf" target="_top">Description</a>
 	, <a href="../labs/myshell.c" target="_top">seed file</a>.<br>
 <br>
 &nbsp;&nbsp; Lab 2 -<br>
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; pthreads and Semaphores<br>
-&nbsp;&nbsp; Due TBD<br>
+&nbsp;&nbsp; Due April 4<br>
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Description<br>
 <br>
 &nbsp;&nbsp; Lab 3 - A Simple File System<br>
-&nbsp;&nbsp; Due TBD<br>
+&nbsp;&nbsp; Due May 3<br>
 &nbsp;&nbsp; coming soon.<br>
 </font></b><b><br>
 </b>
