--- a/teaching/cs677/calendar.html
+++ b/teaching/cs677/calendar.html
@@ -132,6 +132,11 @@ More on GPU Model<br>
       </td>
       <td style="background-color: rgb(51, 102, 255);" valign="top">Feb
 7<br>
+      <div style="text-align: center;">More on GPU Model (cont.)<br>
+The Thrust Template Library<br>
+Intro to Low-Level Image Processing<br>
+      <span style="font-style: italic;">Due</span>: Quiz 1, Lab 1 online<br>
+      </div>
       </td>
       <td style="background-color: rgb(0, 0, 0);" bgcolor="#c0c0c0"
  valign="top">Feb 8<br>
@@ -141,14 +146,24 @@ More on GPU Model<br>
       </td>
     </tr>
     <tr>
-      <td style="background-color: rgb(51, 102, 255);" valign="top">Feb
+      <td style="background-color: rgb(204, 51, 204);" valign="top">Feb
 12<br>
+      <div
+ style="text-align: center; background-color: rgb(204, 51, 204);"><a
+ href="https://www.cs.uakron.edu/%7Etoneil/teaching/cs677/">Online Unit
+4 (Module 3)</a><br>
+      </div>
       </td>
       <td style="background-color: rgb(0, 0, 0);" bgcolor="#c0c0c0"
  valign="top">Feb 13<br>
       </td>
       <td style="background-color: rgb(51, 102, 255);" valign="top">Feb
 14<br>
+      <div style="text-align: center;">Embarassingly Parallel Exaples<br>
+      </div>
+      <div style="text-align: center;"><span style="font-style: italic;">Due</span>:
+HW1, Quiz 2 online<br>
+      </div>
       </td>
       <td style="background-color: rgb(0, 0, 0);" bgcolor="#c0c0c0"
  valign="top">Feb 15<br>
@@ -159,14 +174,22 @@ More on GPU Model<br>
     </tr>
     <tr>
       <td style="background-color: rgb(51, 102, 255);" valign="top">Feb
-19</td>
+19<br>
+      <div style="text-align: center;">Work day, go to BCAS 241<br>
+      </div>
+      </td>
       <td style="background-color: rgb(0, 0, 0);" bgcolor="#c0c0c0"
  valign="top">Feb 20<br>
       <div style="text-align: center; font-style: italic;">President's
 Day observed&nbsp;</div>
       </td>
-      <td style="background-color: rgb(51, 102, 255);" valign="top">Feb
+      <td style="background-color: rgb(204, 51, 204);" valign="top">Feb
 21<br>
+      <div
+ style="text-align: center; background-color: rgb(204, 51, 204);"><a
+ href="https://www.cs.uakron.edu/%7Etoneil/teaching/cs677/">Online Unit
+5 (Module 4A)</a><span style="font-style: italic;"></span><br>
+      </div>
       </td>
       <td style="background-color: rgb(0, 0, 0);" bgcolor="#c0c0c0"
  valign="top">Feb 22</td>
@@ -177,6 +200,9 @@ Day observed&nbsp;</div>
     <tr>
       <td style="background-color: rgb(51, 102, 255);" valign="top">Feb
 26<br>
+      <div style="text-align: center;">Catch-up and Midterm Review<br>
+      <span style="font-style: italic;">Due</span>: Labs 2, 3 online<br>
+      </div>
       </td>
       <td style="background-color: rgb(0, 0, 0);" bgcolor="#c0c0c0"
  valign="top">Feb 27</td>
@@ -195,6 +221,9 @@ Day observed&nbsp;</div>
     <tr>
       <td style="background-color: rgb(51, 102, 255);" valign="top">Mar
 4<br>
+      <div style="text-align: center;">Performance Considerations
+Overview<br>
+      </div>
       <div style="text-align: center;"><span style="font-style: italic;">Sun:
 Last withdraw day</span><br>
       </div>
@@ -202,8 +231,13 @@ Last withdraw day</span><br>
       <td style="background-color: rgb(0, 0, 0);" bgcolor="#c0c0c0"
  valign="top">Mar 5<br>
       </td>
-      <td style="background-color: rgb(51, 102, 255);" valign="top">Mar
+      <td style="background-color: rgb(204, 51, 204);" valign="top">Mar
 6<br>
+      <div
+ style="text-align: center; background-color: rgb(204, 51, 204);"><a
+ href="https://www.cs.uakron.edu/%7Etoneil/teaching/cs677/">Online Unit
+6 (Module 4B)</a><br>
+      </div>
       </td>
       <td style="background-color: rgb(0, 0, 0);" bgcolor="#c0c0c0"
  valign="top">Mar 7<br>
@@ -217,12 +251,21 @@ Last withdraw day</span><br>
     <tr>
       <td style="background-color: rgb(51, 102, 255);" valign="top">Mar
 11<br>
+      <div style="text-align: center;">Monte Carlo Methods<br>
+      <span style="font-style: italic;">Due</span>: Lab 4, Quiz 3
+online; Project proposal<br>
+      </div>
       </td>
       <td style="background-color: rgb(0, 0, 0);" bgcolor="#c0c0c0"
  valign="top">Mar 12<br>
       </td>
-      <td style="background-color: rgb(51, 102, 255);" valign="top">Mar
+      <td style="background-color: rgb(204, 51, 204);" valign="top">Mar
 13<br>
+      <div
+ style="text-align: center; background-color: rgb(204, 51, 204);"><a
+ href="https://www.cs.uakron.edu/%7Etoneil/teaching/cs677/">Online Unit
+7 (Modules 4C, 5)</a><br>
+      </div>
       </td>
       <td style="background-color: rgb(0, 0, 0);" bgcolor="#c0c0c0"
  valign="top">Mar 14&nbsp;</td>
@@ -232,18 +275,31 @@ Last withdraw day</span><br>
     </tr>
     <tr bgcolor="#ffffff">
       <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
- valign="top">Mar 18 </td>
+ valign="top">Mar 18<br>
+      <div style="text-align: center;">Review and Catch-Up<br>
+      <span style="font-style: italic;">Due</span>: HW2, HW3, Quiz 4
+online<br>
+      </div>
+      </td>
       <td style="background-color: rgb(0, 0, 0);" bgcolor="#c0c0c0"
  valign="top">Mar 19<br>
       </td>
-      <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
+      <td style="background-color: rgb(204, 51, 204);" bgcolor="#c0c0c0"
  valign="top">Mar 20<br>
+      <div
+ style="text-align: center; background-color: rgb(204, 51, 204);"><a
+ href="https://www.cs.uakron.edu/%7Etoneil/teaching/cs677/">Online Unit
+8 (Module 6)</a><br>
+      </div>
       </td>
       <td style="background-color: rgb(0, 0, 0);" bgcolor="#c0c0c0"
  valign="top">Mar 21<br>
       </td>
       <td style="background-color: rgb(0, 0, 0);" bgcolor="#c0c0c0"
  valign="top">Mar 22<br>
+      <div style="text-align: center;"><span style="font-style: italic;">Due</span>:
+Quiz 5 online<br>
+      </div>
       </td>
     </tr>
     <tr>
@@ -281,12 +337,21 @@ Break</span><br>
     <tr>
       <td style="background-color: rgb(51, 102, 255);" valign="top">Apr
 1<br>
+      <div style="text-align: center;">Parallel Computation Patterns
+Overview<br>
+      <span style="font-style: italic;"></span><br>
+      </div>
       </td>
       <td style="background-color: rgb(0, 0, 0);" bgcolor="#c0c0c0"
  valign="top">Apr 2<br>
       </td>
       <td style="background-color: rgb(51, 102, 255);" valign="top">Apr
 3<br>
+      <div style="text-align: center;">Parallel Computation Patterns
+Overview (cont.)<br>
+Parallel Reduction Case Study<br>
+More Examples<br>
+      </div>
       </td>
       <td style="background-color: rgb(0, 0, 0);" bgcolor="#c0c0c0"
  valign="top">Apr 4<br>
@@ -296,13 +361,23 @@ Break</span><br>
       </td>
     </tr>
     <tr>
-      <td style="background-color: rgb(51, 102, 255);" valign="top">Apr
+      <td style="background-color: rgb(204, 51, 204);" valign="top">Apr
 8<br>
+      <div style="text-align: center;"><a
+ href="https://www.cs.uakron.edu/%7Etoneil/teaching/cs677/">Online Unit
+9 (Module 7)</a><br>
+      </div>
+      <div style="text-align: center;"><span style="font-style: italic;">Eclipse
+day</span><br>
+      </div>
       </td>
       <td style="background-color: rgb(0, 0, 0);" bgcolor="#c0c0c0"
  valign="top">Apr 9&nbsp;</td>
       <td style="background-color: rgb(51, 102, 255);" valign="top">Apr
 10<br>
+      <div style="text-align: center;">More Examples (cont.)<br>
+      <span style="font-style: italic;">Due</span>: Quiz 6 online<br>
+      </div>
       </td>
       <td style="background-color: rgb(0, 0, 0);" bgcolor="#c0c0c0"
  valign="top">Apr 11&nbsp;</td>
@@ -311,12 +386,24 @@ Break</span><br>
       </td>
     </tr>
     <tr>
-      <td style="background-color: rgb(51, 102, 255);" valign="top">Apr
-15</td>
+      <td style="background-color: rgb(204, 51, 204);" valign="top">Apr
+15<br>
+      <div
+ style="text-align: center; background-color: rgb(204, 51, 204);"><a
+ href="https://www.cs.uakron.edu/%7Etoneil/teaching/cs677/">Online Unit
+10 (Module 11)</a><br>
+      </div>
+      </td>
       <td style="background-color: rgb(0, 0, 0);" bgcolor="#c0c0c0"
  valign="top">Apr 16&nbsp;</td>
       <td style="background-color: rgb(51, 102, 255);" valign="top">Apr
-17</td>
+17<br>
+      <div style="text-align: center;">MPI and CUDA<br>
+Conclusions and Review<br>
+      <span style="font-style: italic;">Due</span>: Labs 5, 6 online;
+Quiz 7 online<br>
+      </div>
+      </td>
       <td style="background-color: rgb(0, 0, 0);" bgcolor="#c0c0c0"
  valign="top">Apr 18&nbsp;</td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Apr
@@ -325,25 +412,38 @@ Break</span><br>
     </tr>
     <tr>
       <td style="background-color: rgb(51, 102, 255);" valign="top">Apr
-22</td>
+22<br>
+      <div style="text-align: center;">Work/study day<br>
+      <span style="font-style: italic;">Due</span>: Project report<br>
+      </div>
+      </td>
       <td style="background-color: rgb(0, 0, 0);" bgcolor="#c0c0c0"
  valign="top">Apr 23&nbsp;</td>
-      <td style="background-color: rgb(51, 102, 255);" valign="top">Apr
-24</td>
+      <td style="background-color: rgb(51, 0, 51);" valign="top">Apr
+24<br>
+      <div style="text-align: center; background-color: rgb(51, 0, 51);">Student
+Talks<br>
+      </div>
+      </td>
       <td style="background-color: rgb(0, 0, 0);" bgcolor="#c0c0c0"
  valign="top">Apr 25</td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Apr
 26</td>
     </tr>
     <tr>
-      <td style="background-color: rgb(51, 102, 255);" valign="top">Apr
+      <td style="background-color: rgb(51, 0, 51);" valign="top">Apr
 29<br>
+      <div style="text-align: center; background-color: rgb(51, 0, 51);">Student
+Talks<br>
+      </div>
       </td>
       <td style="background-color: rgb(0, 0, 0);" bgcolor="#c0c0c0"
  valign="top">Apr 30<br>
       </td>
       <td style="background-color: rgb(51, 102, 255);" valign="top">May
 1<br>
+      <div style="text-align: center;">Catch-Up and Final Exam Review<br>
+      </div>
       </td>
       <td style="background-color: rgb(0, 0, 0);" bgcolor="#c0c0c0"
  valign="top">May 2<br>
@@ -381,6 +481,23 @@ var timeDiff = Math.abs(dateSecond.getTime() - today.getTime());
 var diffDays = Math.ceil(timeDiff / (1000 * 3600 * 24));
 document.write("<br>Only " + diffDays + " days left until end of spring term (5/10/2024).");
 </script><br>
+</span><span style="font-weight: bold;">GROUP PROJECTS</span><br>
+<br>
+Wednesday April 24<br>
+1.<br>
+2.<br>
+3.<br>
+4.<br>
+5.<br>
+<br>
+Monday April 29<br>
+1.<br>
+2.<br>
+3.<br>
+4.<br>
+5.<span style="font-style: italic;"><br>
+<br>
+<br>
 </span>
 </body>
 </html>
