--- a/teaching/cs426/calendar.html
+++ b/teaching/cs426/calendar.html
@@ -124,9 +124,7 @@ Last drop day</span><br>
       </td>
       <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
  valign="top">Feb 8<br>
-      <div style="text-align: center;"><span style="font-style: italic;">Lectures
-P1 (from slide )</span><br>
-      </div>
+      <div style="text-align: center;">Lecture P1 (cont.) </div>
       </td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Feb
 9<br>
@@ -138,12 +136,17 @@ P1 (from slide )</span><br>
       </td>
       <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
  valign="top">Feb 13<br>
+      <div style="text-align: center;"><span style="font-style: italic;"></span>Lectures
+P1, P2 </div>
       </td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Feb
 14<br>
       </td>
       <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
  valign="top">Feb 15<br>
+      <div style="text-align: center;"><span style="font-style: italic;">Lectures
+P2 (from slide 11)</span><br>
+      </div>
       </td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Feb
 16<br>
