--- a/teaching/cs677/calendar.html
+++ b/teaching/cs677/calendar.html
@@ -62,7 +62,7 @@ closed, snow day</span><br>
     </tr>
     <tr>
       <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
- valign="top">Jan 22<br>
+ valign="top"><span style="text-decoration: line-through;">Jan 22</span><br>
       <div style="text-align: center;">Admin and Intro<br>
 Intro GPU Model<br>
       </div>
@@ -74,8 +74,9 @@ Last add day</span><br>
       </td>
       <td style="background-color: rgb(0, 0, 0);" bgcolor="#c0c0c0"
  valign="top">Jan 23</td>
-      <td style="background-color: rgb(204, 51, 204);" valign="top">Jan
-24<br>
+      <td style="background-color: rgb(204, 51, 204);" valign="top"><span
+ style="text-decoration: line-through;">Jan
+24</span><br>
       <div
  style="text-align: center; background-color: rgb(204, 51, 204);"><a
  href="https://www.cs.uakron.edu/%7Etoneil/teaching/cs677/">Online Unit
@@ -88,8 +89,9 @@ Last add day</span><br>
       </td>
     </tr>
     <tr>
-      <td style="background-color: rgb(204, 51, 204);" valign="top">Jan
-29<br>
+      <td style="background-color: rgb(204, 51, 204);" valign="top"><span
+ style="text-decoration: line-through;">Jan
+29</span><br>
       <div
  style="text-align: center; background-color: rgb(204, 51, 204);"><a
  href="https://www.cs.uakron.edu/%7Etoneil/teaching/cs677/">Online Unit
@@ -103,8 +105,9 @@ Last drop day</span><br>
       </td>
       <td style="background-color: rgb(0, 0, 0);" bgcolor="#c0c0c0"
  valign="top">Jan 30</td>
-      <td style="background-color: rgb(51, 102, 255);" valign="top">Jan
-31<br>
+      <td style="background-color: rgb(51, 102, 255);" valign="top"><span
+ style="text-decoration: line-through;">Jan
+31</span><br>
       <div style="text-align: center;">Intro GPU Model (cont.)<br>
 More on GPU Model<br>
       <span style="font-style: italic;">Due</span>: HW0<br>
@@ -119,8 +122,9 @@ More on GPU Model<br>
     </tr>
     <tr>
       <td
- style="vertical-align: top; background-color: rgb(204, 51, 204);">Feb
-5<br>
+ style="vertical-align: top; background-color: rgb(204, 51, 204);"><span
+ style="text-decoration: line-through;">Feb
+5</span><br>
       <div
  style="text-align: center; background-color: rgb(204, 51, 204);"><a
  href="https://www.cs.uakron.edu/%7Etoneil/teaching/cs677/">Online Unit
@@ -130,8 +134,9 @@ More on GPU Model<br>
       <td style="background-color: rgb(0, 0, 0);" bgcolor="#c0c0c0"
  valign="top">Feb 6<br>
       </td>
-      <td style="background-color: rgb(51, 102, 255);" valign="top">Feb
-7<br>
+      <td style="background-color: rgb(51, 102, 255);" valign="top"><span
+ style="text-decoration: line-through;">Feb
+7</span><br>
       <div style="text-align: center;">More on GPU Model (cont.)<br>
 The Thrust Template Library<br>
 Intro to Low-Level Image Processing<br>
@@ -146,8 +151,9 @@ Intro to Low-Level Image Processing<br>
       </td>
     </tr>
     <tr>
-      <td style="background-color: rgb(204, 51, 204);" valign="top">Feb
-12<br>
+      <td style="background-color: rgb(204, 51, 204);" valign="top"><span
+ style="text-decoration: line-through;">Feb
+12</span><br>
       <div
  style="text-align: center; background-color: rgb(204, 51, 204);"><a
  href="https://www.cs.uakron.edu/%7Etoneil/teaching/cs677/">Online Unit
@@ -157,9 +163,10 @@ Intro to Low-Level Image Processing<br>
       <td style="background-color: rgb(0, 0, 0);" bgcolor="#c0c0c0"
  valign="top">Feb 13<br>
       </td>
-      <td style="background-color: rgb(51, 102, 255);" valign="top">Feb
-14<br>
-      <div style="text-align: center;">Embarassingly Parallel Exaples<br>
+      <td style="background-color: rgb(51, 102, 255);" valign="top"><span
+ style="text-decoration: line-through;">Feb
+14</span><br>
+      <div style="text-align: center;">Embarassingly Parallel Examples<br>
       </div>
       <div style="text-align: center;"><span style="font-style: italic;">Due</span>:
 HW1, Quiz 2 online<br>
@@ -173,8 +180,9 @@ HW1, Quiz 2 online<br>
       </td>
     </tr>
     <tr>
-      <td style="background-color: rgb(51, 102, 255);" valign="top">Feb
-19<br>
+      <td style="background-color: rgb(51, 102, 255);" valign="top"><span
+ style="font-weight: bold;">Feb
+19</span><br>
       <div style="text-align: center;">Work day, go to BCAS 241<br>
       </div>
       </td>
@@ -200,6 +208,9 @@ Day observed&nbsp;</div>
     <tr>
       <td style="background-color: rgb(51, 102, 255);" valign="top">Feb
 26<br>
+      <div style="text-align: center;">Embarassingly Parallel Examples
+(cont.)<br>
+      </div>
       <div style="text-align: center;">Catch-up and Midterm Review<br>
       <span style="font-style: italic;">Due</span>: Labs 2, 3 online<br>
       </div>
@@ -481,7 +492,8 @@ var timeDiff = Math.abs(dateSecond.getTime() - today.getTime());
 var diffDays = Math.ceil(timeDiff / (1000 * 3600 * 24));
 document.write("<br>Only " + diffDays + " days left until end of spring term (5/10/2024).");
 </script><br>
-</span><span style="font-weight: bold;">GROUP PROJECTS</span><br>
+</span><span style="font-weight: bold;"><br>
+GROUP PROJECTS</span><br>
 <br>
 Wednesday April 24<br>
 1.<br>
